# laboratory

./: .gitignore  README.md  config.ini  example-secret-config.ini  pyproject.toml
laboratory/: __init__.py  cli.py  cluster.py  config.py  errors.py  state.py  util.py
laboratory/actions/digitalocean/: __init__.py  cluster.py  image_registry.py  ingress_operator.py  network.py  node.py  storage_operator.py
laboratory/actions/homelab/: cluster.py
laboratory/actions/shared/: cert_operator.py  gitea.py
laboratory/apis/: ansible.py  assets.py  digitalocean.py  http.py  kubecfg.py  script.py  shell.py  ssh.py
manifests/: cluster-ca.jsonnet  gitea.jsonnet  image-registry-cloud.jsonnet  image-registry-local.jsonnet  ingress-operator-cloud.jsonnet  ingress-operator.libsonnet  util.libsonnet
playbooks/: cluster-node-rpi4-k0s.yml  rpi4-base.yml
playbooks/tasks/: admin-user.yml  arch-init.yml  k0s-setup.yml
scripts/: mksdcard.sh
